<resources>
    <string name="app_name">Voted-In</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered? <b>Login</b></string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?<b> Click here.</b></string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your log-in email so we can send you instructions to change your password.</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="btn_signup">signup</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="cancel">cancel</string>
    <string name="settings">Settings</string>
    <string name="hint_old_password">Old Password</string>
    <string name="new_email_msg">Please enter the new email you would like us to be using.</string>
    <string name="change_password_msg">Please enter your current password followed by the new password you would like to use.</string>
    <string name="delete_account_msg">This action will result in deleting your account. If you are sure you want to do so, proceed by pressing on <b>DELETE ACCOUNT</b>.</string>
    <string name="btn_delete_user_acct">Delete Account</string>
    <string name="delete_your_account">Delete Your Account</string>
    <string name="poll_id">Poll ID</string>
    <string name="votes">Votes:</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="poll_question">Poll Question</string>
    <string name="_0">0</string>
    <string name="btn_start_poll_session">Start Poll Session</string>
    <string name="poll_session">Polling Session</string>
    <string name="finish">Finish</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="btn_view_results">Check Poll Results</string>
</resources>
