<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_bkg"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_height_logo_large"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_small"
                android:src="@drawable/app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/margin_small"
                android:text="@string/lbl_forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/button_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:background="@null"
                android:text="@string/forgot_password_msg"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small" />


            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/white_transparent_bkg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/margin_small"
                android:textColor="@android:color/white"
                android:textColorHint="#fff"
                android:textSize="@dimen/text_size_small" />

            <!-- Login Button -->

            <Button
                android:id="@+id/button_reset_password"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/white_border_transparent_bkg"
                android:text="@string/btn_reset_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_back"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/white_border_transparent_bkg"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/width_height_logo_large"
        android:layout_height="@dimen/width_height_logo_large"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>