<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bkg"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_small"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="@dimen/width_height_small"
            android:layout_height="@dimen/width_height_small"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/ic_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/white_border_transparent_bkg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sending_pass_reset_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/send_password_reset_email"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_layout_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="500"
                    app:el_expanded="false">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@null"
                            android:text="@string/forgot_password_msg"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_small" />

                        <EditText
                            android:id="@+id/old_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/white_transparent_bkg"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="@dimen/margin_small"
                            android:textColor="@android:color/white"
                            android:textColorHint="#fff"
                            android:textSize="@dimen/text_size_small" />

                        <Button
                            android:id="@+id/send"
                            style="?android:textAppearanceSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@drawable/white_bkg"
                            android:text="@string/btn_send"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </net.cachapa.expandablelayout.ExpandableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/white_border_transparent_bkg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/change_email_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/change_email"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="500"
                    app:el_expanded="false">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@null"
                            android:text="@string/new_email_msg"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_small" />

                        <EditText
                            android:id="@+id/new_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/white_transparent_bkg"
                            android:hint="@string/hint_new_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="@dimen/margin_small"
                            android:textColor="@android:color/white"
                            android:textColorHint="#fff"
                            android:textSize="@dimen/text_size_small" />

                        <Button
                            android:id="@+id/changeEmail"
                            style="?android:textAppearanceSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@drawable/white_bkg"
                            android:text="@string/btn_change"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </net.cachapa.expandablelayout.ExpandableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/white_border_transparent_bkg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/change_password_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/change_password"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="500"
                    app:el_expanded="false">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@null"
                            android:text="@string/change_password_msg"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_small" />

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:background="@drawable/white_transparent_bkg"
                            android:hint="@string/hint_old_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="@dimen/margin_small"
                            android:textColor="@android:color/white"
                            android:textColorHint="#fff"
                            android:textSize="@dimen/text_size_small" />

                        <EditText
                            android:id="@+id/newPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/white_transparent_bkg"
                            android:hint="@string/new_pass"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="@dimen/margin_small"
                            android:textColor="@android:color/white"
                            android:textColorHint="#fff"
                            android:textSize="@dimen/text_size_small" />

                        <Button
                            android:id="@+id/changePass"
                            style="?android:textAppearanceSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@drawable/white_bkg"
                            android:text="@string/btn_change"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </net.cachapa.expandablelayout.ExpandableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_border_transparent_bkg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/remove_user_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/delete_your_account"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="500"
                    app:el_expanded="false">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:background="@null"
                            android:text="@string/delete_account_msg"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/text_size_small" />

                        <Button
                            android:id="@+id/remove"
                            style="?android:textAppearanceSmall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@drawable/white_bkg"
                            android:text="@string/btn_delete_user_acct"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                </net.cachapa.expandablelayout.ExpandableLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/white_border_transparent_bkg"
                android:text="@string/btn_sign_out"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/width_height_logo_large"
        android:layout_height="@dimen/width_height_logo_large"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>